--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">IOT_Espressif_EspTouch</string>
+    <string name="app_name">GST Esp Touch</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="app_version">v0.3.4.6</string>
@@ -19,4 +19,7 @@
     <string name="setting">SETTING</string>
     <string name="permissions_access_location_error">This app need some permission to continue running.</string>
     <string name="str_request_location_message">This app need location permission to continue running.</string>
+    <string name="title_server_ip">Server:</string>
+    <string name="tips_server_ip_is_empty">服务器地址不能为空</string>
+    <string name="tips_server_ip_is_invalid">ip不合法</string>
 </resources>
